--- a/src/index.css
+++ b/src/index.css
@@ -184,6 +184,7 @@ header h1 {
 }
 .formulario input[type="text"].nuevo-presupuesto,
 .formulario input[type="number"].nuevo-presupuesto {
+  width: 100%;
   font-size: 2.8rem;
   text-align: center;
 }
@@ -322,8 +323,16 @@ main {
 
 .nuevo-gasto {
   position: fixed;
-  bottom: 5rem;
-  right: 5rem;
+  bottom: 15px;
+  right: 15px;
+}
+
+@media (min-width: 640px) {
+  .nuevo-gasto {
+    position: fixed;
+    bottom: 5rem;
+    right: 5rem;
+  }
 }
 
 .nuevo-gasto img {
@@ -341,25 +350,36 @@ main {
   right: 0;
   bottom: 0;
 }
+
+.modalContainer {
+  height: 100%;
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .modal .cerrar-modal {
   position: absolute;
-  right: 3rem;
+  right: 0rem;
   top: 3rem;
   width: 3rem;
   height: 3rem;
+  z-index: 100;
 }
+
 .modal .cerrar-modal img {
   width: 100%;
 }
 
 .modal .formulario {
-  max-width: 80rem;
-  width: 40rem;
+  max-width: 46rem;
+  width: 90%;
   transition-property: all;
   transition-duration: 300ms;
   transition-timing-function: ease-in;
   opacity: 0;
 }
+
 .modal label {
   color: var(--blanco);
 }
